Filtros de los cruds añadidos
Fueron añadidos todos los filtros de los cruds, aun falta cambiar el proceso almacenado del filtro para las publicaciones y filtrar las pantallas de inicio

--- a/Front - Proyecto/src/Administrativo/CRUD'S/Publicaciones.html
+++ b/Front - Proyecto/src/Administrativo/CRUD'S/Publicaciones.html
@@ -161,7 +161,7 @@
                     </h2>
                     <div class="flex items-center mx-auto" id="busqueda">
                         <img id="lupota" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/lupa%20blanca.png?raw=true" class="absolute xl:ml-[32rem] lg:ml-[22rem] md:ml-[22rem] lg:block md:block xl:block ml-[10rem] hidden h-5">
-                        <input type="search" class="bg-[#7EBBAA] xl:h-10 lg:h-10 h-8 rounded-[30px] xl:w-[32rem] lg:w-[22rem] md:w-[22rem] w-[10rem] ml-8 hidden lg:block xl:block md:block border-none object-cover text-white p-3 hover:bg-[#7ebbaacc] focus:outline-none placeholder:text-white" placeholder="Buscar">
+                        <input type="search" id="busqueda-input" onkeypress="FiltrarPublicaciones()" class="bg-[#7EBBAA] xl:h-10 lg:h-10 h-8 rounded-[30px] xl:w-[32rem] lg:w-[22rem] md:w-[22rem] w-[10rem] ml-8 hidden lg:block xl:block md:block border-none object-cover text-white p-3 hover:bg-[#7ebbaacc] focus:outline-none placeholder:text-white" placeholder="Buscar">
                     </div>
                 </div>
                 
