--- a/Front - Proyecto/src/Auth/Reestablezca_contraseña.html
+++ b/Front - Proyecto/src/Auth/Reestablezca_contraseña.html
@@ -31,5 +31,6 @@
     </div>
   </div>
   <script src="/Front - Proyecto/src/index.js"></script>
+  <script src="auth.js"></script>
 </body>
 </html>
