--- a/Front - Proyecto/src/Auth/Revisa_tu_bandeja.html
+++ b/Front - Proyecto/src/Auth/Revisa_tu_bandeja.html
@@ -24,7 +24,7 @@
       <div class="flex justify-around items-center mt-6 mb-5">
           <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Iguana.png?raw=true" alt="iguana" class="w-[10rem]">
           <div>
-            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/tortuga.png?raw=true" alt="tortuguita" class="w-[9rem] h-[9rem] mt-12">
+            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/tortuga.png?raw=true" alt="tortuguita" class="w-36 mt-12">
           </div>
           
       </div>
@@ -36,5 +36,6 @@
     </div>
   </div>
   <script src="/Front - Proyecto/src/index.js"></script>
+  <script src="auth.js"></script>
 </body>
 </html>
