--- a/Front - Proyecto/src/Administrativo/CRUD'S/Administrativos.html
+++ b/Front - Proyecto/src/Administrativo/CRUD'S/Administrativos.html
@@ -89,7 +89,7 @@
             <div class="pl-7 lg:pl-5 w-full flex justify-around items-center lg:hidden"> <!--Contendor de filtro y botones de acciones-->
                 <div class="flex items-center" id="busqueda">
                     <img id="lupota" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/lupa%20blanca.png?raw=true" class="absolute md:ml-[22rem] block ml-[10rem] h-5">
-                    <input type="search" class="bg-[#7EBBAA] h-8 rounded-[30px] md:w-[22rem] w-[10rem] ml-8 block border-none object-cover text-white p-3 hover:bg-[#7ebbaacc] focus:outline-none placeholder:text-white" placeholder="Buscar">
+                    <input type="search" id="busqueda-input2" onkeypress="FiltrarAdministrativos()" class="bg-[#7EBBAA] h-8 rounded-[30px] md:w-[22rem] w-[10rem] ml-8 block border-none object-cover text-white p-3 hover:bg-[#7ebbaacc] focus:outline-none placeholder:text-white" placeholder="Buscar">
                 </div>
                 <div class="">
                     <button onclick="añadirRegistro()" class="hover:bg-[#7EBBAA] bg-[#276B58] text-white rounded px-2 py-0.5 md:px-4 items-center flex">
