--- a/Front - Proyecto/src/Auth/Reestablecer_contraseña.html
+++ b/Front - Proyecto/src/Auth/Reestablecer_contraseña.html
@@ -19,17 +19,20 @@
           Introduce tu dirección de correo electrónico o nombre de usuario y te enviaremos un enlace para que restablezcas la contraseña.
         </p>
       </div>
-      <div class="mt-6 mb-5">
-        <input type="text" id="correoUsuario" class="mb-10 p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold leading-6 tracking-normal text-left text-white placeholder-white placeholder-text-sm placeholder-opacity-[0.75] focus:outline-none" placeholder="Correo o nombre de usuario">
+      <div class="mt-6 mb-10">
+        <input type="text" id="reestablecer_usuario" class="mb-2 p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold leading-6 tracking-normal text-left text-white placeholder-white placeholder-text-sm placeholder-opacity-[0.75] focus:outline-none" placeholder="Correo o nombre de usuario">
+        <p id="mensaje3" class="w-auto p-2 text-[#e28686] text-[10px] md:text-xs lg:text-sm"></p>
       </div>
+      
       <div class="mt-6 text-center">
-        <button id="rp2" onclick="mostrarR2(event)" class="mt-2 bg-white bg-opacity-15 text-white py-2 px-4 rounded-full hover:bg-transparent hover:text-ind font-bold opacity-70 text-xs md:text-sm lg:text-base active:bg-[#50a48c] hover:bg-[#5e9f9f]">
+        <button id="rp2" onclick="mostrarR2(event)" class="mt-2 bg-white bg-opacity-15 text-white py-2 px-4 rounded-full hover:text-ind font-bold opacity-70 text-xs md:text-sm lg:text-base active:bg-[#50a48c] hover:bg-[#5e9f9f]">
           Reestablecer contraseña
         </button>
       </div>
     </div>
   </div>
   <script src="/Front - Proyecto/src/index.js"></script>
+  <script src="auth.js"></script>
 </body>
 </html>
 
