--- a/Front - Proyecto/src/Flora y Fauna UTP - inicio.html
+++ b/Front - Proyecto/src/Flora y Fauna UTP - inicio.html
@@ -77,7 +77,7 @@
             <div class="flex items-center" id="busqueda"> <!--Barra de busqueda-->
             <img id="lupota" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/image-1.png?raw=true" class="absolute xl:ml-[31rem] lg:ml-[29rem] md:ml-[21rem] lg:block md:block xl:block ml-[9rem] hidden h-5">
             <img id="lupita" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/lupa%20blanca.png?raw=true" class="block md:hidden lg:hidden xl:hidden h-6 ml-2" alt="">
-            <input type="search" class="bg-[#F0FEF8] xl:h-10 lg:h-10 h-8 rounded-[30px] xl:w-[32rem] lg:w-[30rem] md:w-[22rem] w-[10rem] ml-5 hidden lg:block xl:block md:block border-none object-cover text-slate-500 p-3 hover:bg-[#ffffff] focus:outline-none" placeholder="Buscar">
+            <input type="search" id="busqueda-input" onkeypress="FiltrarPublicaciones()" class="bg-[#F0FEF8] xl:h-10 lg:h-10 h-8 rounded-[30px] xl:w-[32rem] lg:w-[30rem] md:w-[22rem] w-[10rem] ml-5 hidden lg:block xl:block md:block border-none object-cover text-slate-500 p-3 hover:bg-[#ffffff] focus:outline-none" placeholder="Buscar">
             </div>
             <!--Iniciar sesion-->
             <button onclick="mostrarInicioS(event)" class="xl:p-2 lg:p-2 p-[0.5] w-[8rem] xl:h-10 lg:h-10 h-8 bg-[#F0FEF8] rounded-[50px]"><a href="#" class="">Iniciar Sesión</a></button>
