--- a/Front - Proyecto/src/Administrativo/VerificarBiologo/Solicitudes.html
+++ b/Front - Proyecto/src/Administrativo/VerificarBiologo/Solicitudes.html
@@ -203,7 +203,7 @@
                     </a>
                     <a href="Aprobados.html">
                         <button id="botonAprobadas" onclick="filtrarSolicitudes('aprobada')">
-                            <div class="flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[6.5rem] md:w-[8rem] lg:w-[12rem] ml-4 md:ml-0">
+                            <div class="flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[6.5rem] md:w-[8rem] lg:w-[12rem] ml-4 md:ml-0 mt-2">
                                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Aprobado.png?raw=true" alt="icono-aprobado" class="w-[20px] h-[20px] mt-[2px]">
                                 <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Aprobado</p>
                             </div>
@@ -211,7 +211,7 @@
                     </a>
                     <a href="Rechazados.html">
                         <button id="botonDesaprobadas" onclick="filtrarSolicitudes('desaprobada')">
-                            <div class="flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[8rem] md:w-[9.5rem] lg:w-[12rem] ml-2 md:ml-0">
+                            <div class="flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[8rem] md:w-[9.5rem] lg:w-[12rem] ml-2 md:ml-0 mt-2">
                                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Desaprobado.png?raw=true" alt="icono-desaprobado" class="w-[20px] h-[20px] mt-[2px]">
                                 <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Rechazado</p>
                             </div>
