--- a/Front - Proyecto/src/Flora y Fauna UTP - inicio.html
+++ b/Front - Proyecto/src/Flora y Fauna UTP - inicio.html
@@ -27,7 +27,7 @@
     aside ul li p{
         font-family: 'Montserrat', sans-serif;
     }
-    input[type="search"]::-webkit-search-cancel-button,
+    input[type="search"]::-webkit-search-cancel-button, /* Quita el boton que sale por predeterminado al utilizar un input tipo search*/
     input[type="search"]::-webkit-search-clear-button {
         -webkit-appearance: none;
         appearance: none;
@@ -360,9 +360,8 @@
                     </div>
                 </footer>
             </section>
-        </div>                                                                  <!--xl:min-w-[54rem] para pantalla normal    lg:min-w-[20rem] lg:max-w-xl xl:min-w-[54rem] xl:max-w-[60rem] 2xl:min-w-[58rem]--> <!--lg:w-[25rem] xl:min-w-[42rem] 2xl:w-[60rem] md:w-[28rem]-->
+        </div>
     </div>
-    
     <script src="index.js"></script>
     <script src="Inicio_General.js"></script>
     <script src="/Front - Proyecto/src/Auth/auth.js"></script>
