--- a/Front - Proyecto/src/Administrativo/Reportes_Admin.html
+++ b/Front - Proyecto/src/Administrativo/Reportes_Admin.html
@@ -27,8 +27,8 @@
     aside ul li p{
         font-family: 'Montserrat', sans-serif;
     }
-    input[type="search"]::-webkit-search-cancel-button,
-    input[type="search"]::-webkit-search-clear-button {
+    input[type="search"]::-webkit-search-cancel-button, /* Quita el boton que sale por predeterminado al utilizar un input tipo search*/
+    input[type="search"]::-webkit-search-clear-button { 
         -webkit-appearance: none;
         appearance: none;
         display: none;
