--- a/Front - Proyecto/src/Administrativo/VerificarBiologo/Aprobados.html
+++ b/Front - Proyecto/src/Administrativo/VerificarBiologo/Aprobados.html
@@ -27,7 +27,7 @@
     aside ul li p{
         font-family: 'Montserrat', sans-serif;
     }
-    input[type="search"]::-webkit-search-cancel-button,
+    input[type="search"]::-webkit-search-cancel-button, /* Quita el boton que sale por predeterminado al utilizar un input tipo search*/
     input[type="search"]::-webkit-search-clear-button {
         -webkit-appearance: none;
         appearance: none;
@@ -207,7 +207,7 @@
                     </a>
                     <a href="Aprobados.html">
                         <button id="botonAprobadas" onclick="filtrarSolicitudes('aprobada')">
-                            <div class="flex rounded-[50px] bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[6.5rem] md:w-[8rem] lg:w-[12rem] ml-4 md:ml-0">
+                            <div class="flex rounded-[50px] bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[6.5rem] md:w-[8rem] lg:w-[12rem] ml-4 md:ml-0 mt-2">
                                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Aprobado.png?raw=true" alt="icono-aprobado" class="w-[20px] h-[20px] mt-[2px]">
                                 <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Aprobado</p>
                             </div>
@@ -215,7 +215,7 @@
                     </a>
                     <a href="Rechazados.html">
                         <button id="botonDesaprobadas" onclick="filtrarSolicitudes('desaprobada')">
-                            <div class="flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[8rem] md:w-[9.5rem] lg:w-[12rem] ml-2 md:ml-0">
+                            <div class="flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[8rem] md:w-[9.5rem] lg:w-[12rem] ml-2 md:ml-0 mt-2">
                                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Desaprobado.png?raw=true" alt="icono-desaprobado" class="w-[20px] h-[20px] mt-[2px]">
                                 <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Rechazado</p>
                             </div>
