--- a/Front - Proyecto/src/Usuario/Comentarios.html
+++ b/Front - Proyecto/src/Usuario/Comentarios.html
@@ -27,7 +27,7 @@
     aside ul li p{
         font-family: 'Montserrat', sans-serif;
     }
-    input[type="search"]::-webkit-search-cancel-button,
+    input[type="search"]::-webkit-search-cancel-button, /* Quita el boton que sale por predeterminado al utilizar un input tipo search*/
     input[type="search"]::-webkit-search-clear-button {
         -webkit-appearance: none;
         appearance: none;
